# osm-way-normalize

./: CMakeLists.txt  Dockerfile  Makefile  README.md  application_flow.md  dependencies.sh  exclude_tags.csv
include/: normalize_handler.hpp
include/node_ref/: node_ref_table.hpp
include/tags/: parse_tag_csv.hpp
src/: main.cpp
src/node_ref/: node_ref_table.cpp
src/tags/: parse_tag_csv.cpp
